--- a/styles/main.css
+++ b/styles/main.css
@@ -215,6 +215,11 @@ hr {
 }
 
 
+.alert {
+    padding: 0.5rem 0.5rem !important;
+}
+
+
 /* Disable iOS auto-zooming on input fields, this might take a few tries... */
 @media screen and (-webkit-min-device-pixel-ratio:0) and (max-width:992px) {
     select, input {
